--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "solc": "^0.5.5",
+    "truffle": "^5.0.7",
     "truffle-hdwallet-provider": "^1.0.5",
     "web3-utils": "^1.0.0-beta.48"
   },
